Drop support for Java 17 Updated Lettuce to 6.7.1 Updated Java to 21 Executors are now based on VirtualThreads pools Fixed clickable messages inside the browser Heavily reduced jar size